# Voice-Diary

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/audio-api/: main.py  pyproject.toml
apps/audio-api/src/: main.py
apps/audio-api/src/audio_api/controllers/: progress.py  upload.py
apps/audio-api/src/audio_api/controllers/audio/: media.py  upload.py
apps/audio-api/src/audio_api/controllers/user/: album.py  auth.py  post.py  profile.py
apps/audio-api/src/audio_api/cores/: config.py  database.py  injectable.py  model.py  redis.py
apps/audio-api/src/audio_api/dtos/request/: album.py  auth.py  post.py  upload.py
apps/audio-api/src/audio_api/dtos/response/: album.py  auth.py  post.py  upload.py
apps/audio-api/src/audio_api/models/: album.py  audio.py  post.py  user.py
apps/audio-api/src/audio_api/router/: router.py
apps/audio-api/src/audio_api/schemas/: upload_payload.py
apps/audio-api/src/audio_api/services/: google_docs.py  handle_upload_finished.py  pdf_service.py  transcript_s3_sync.py  upload_flow.py  word_service.py
apps/audio-api/src/audio_api/utils/: password_encryption.py  transcript_converter.py  transcript_parser.py
apps/audio-diarizer/: pyproject.toml
apps/audio-diarizer/src/: main.py
apps/audio-diarizer/src/audio_diarizer/core/: config.py
apps/audio-diarizer/src/audio_diarizer/services/: diarizer_service.py
apps/audio-diarizer/src/audio_diarizer/utils/: diarization.py
apps/audio-enhancer/: pyproject.toml
apps/audio-enhancer/src/: main.py
apps/audio-enhancer/src/audio_enhancer/cores/: config.py
apps/audio-enhancer/src/audio_enhancer/services/: enhancer.py
apps/audio-enhancer/src/audio_enhancer/utils/: enhancement.py  quality_check.py
apps/audio-langdetector/: pyproject.toml
apps/audio-langdetector/src/: main.py
apps/audio-langdetector/src/audio_langdetector/services/: detector.py
apps/audio-langdetector/src/audio_langdetector/utils/: engine.py
apps/audio-orchestrator/: pyproject.toml
apps/audio-orchestrator/src/: main.py
apps/audio-orchestrator/src/audio_orchestrator/cores/: config.py  redis.py
apps/audio-orchestrator/src/audio_orchestrator/services/: failure_handler.py  manual_publish.py  state_manager.py  workflow.py
apps/audio-postprocessor/: pyproject.toml
apps/audio-postprocessor/src/: main.py
apps/audio-postprocessor/src/audio_postprocessor/services/: postprocessor.py
apps/audio-postprocessor/src/audio_postprocessor/utils/: alignment.py
apps/audio-preprocessor/: pyproject.toml
apps/audio-preprocessor/src/: main.py
apps/audio-preprocessor/src/audio_preprocessor/cores/: config.py
apps/audio-preprocessor/src/audio_preprocessor/services/: processor.py
apps/audio-preprocessor/src/audio_preprocessor/utils/: ffmpeg_ops.py
apps/audio-recognizer/: pyproject.toml
apps/audio-recognizer/src/: main.py
apps/audio-recognizer/src/audio_recognizer/cores/: config.py
apps/audio-recognizer/src/audio_recognizer/services/: recognizer.py
apps/audio-recognizer/src/audio_recognizer/utils/: engine.py  whisper_engine.py
apps/audio-segmenter/: pyproject.toml
apps/audio-segmenter/src/: main.py
apps/audio-segmenter/src/audio_segmenter/services/: segmenter.py
apps/audio-segmenter/src/audio_segmenter/utils/: alignment.py  splitter.py
apps/audio-transcoder/: pyproject.toml
apps/audio-transcoder/src/: main.py
apps/audio-transcoder/src/audio_transcoder/cores/: config.py
apps/audio-transcoder/src/audio_transcoder/services/: transcoder.py
apps/audio-transcoder/src/audio_transcoder/utils/: hls_generator.py
apps/identity-service/: pyproject.toml
apps/user-api/: pyproject.toml
apps/user-api/src/: main.py
apps/user-api/src/user_api/: __init__.py
apps/user-api/src/user_api/controller/: album.py  post.py
apps/user-api/src/user_api/cores/: config.py  database.py
apps/user-api/src/user_api/models/: post.py  user.py
apps/user-api/src/user_api/router/: router.py
apps/user-api/src/user_api/schemas/: post.py
libs/messaging/: pyproject.toml
libs/messaging/src/shared_messaging/: consumer.py  producer.py
libs/schemas/: pyproject.toml
libs/schemas/src/shared_schemas/: base.py  commands.py  events.py
libs/storage/: pyproject.toml
libs/storage/src/shared_storage/: s3.py
