[project]
name = "media-api"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "redis",
    "beanie",
    "motor",
    "pydantic-settings",
    "shared-storage",
    "shared-messaging",
    "shared-schemas"
]

[tool.uv.sources]
shared-storage = { workspace = true }
shared-messaging = { workspace = true }
shared-schemas = { workspace = true }