[project]
name = "audio-enhancer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "speechbrain",
  "scipy",
  "numpy",
  "pydub",
  "soundfile",
  "shared-messaging",
  "shared-storage",
  "shared-schemas",
  "pydantic-settings"
]

[tool.uv.sources]
shared-messaging = { workspace = true }
shared-storage = { workspace = true }
shared-schemas = { workspace = true }
